deploy: 1af7ed83cd89ab5e160b32ed8ae4c5998dc3c1ae

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -12,6 +12,7 @@
         gtag('config', 'G-Q7LK34R0CV');
     </script>
     <link rel="index" title="Index" href="../genindex.html" /><link rel="search" title="Search" href="../search.html" />
+        <link rel="canonical" href="https://nikhilxsunder.github.io/fedfred/_modules/index.html" />
 
     <link rel="shortcut icon" href="../_static/fedfred_favicon.ico"/><!-- Generated with Sphinx 7.4.7 and Furo 2024.08.06 -->
         <title>Overview: module code - fedfred</title>
