--- a/code_of_conduct.html
+++ b/code_of_conduct.html
@@ -13,6 +13,7 @@
         gtag('config', 'G-Q7LK34R0CV');
     </script>
     <link rel="index" title="Index" href="genindex.html" /><link rel="search" title="Search" href="search.html" /><link rel="next" title="Security Policy" href="security.html" /><link rel="prev" title="Changelog" href="changelog.html" />
+        <link rel="canonical" href="https://nikhilxsunder.github.io/fedfred/code_of_conduct.html" />
 
     <link rel="shortcut icon" href="_static/fedfred_favicon.ico"/><!-- Generated with Sphinx 7.4.7 and Furo 2024.08.06 -->
         <title>Code of Conduct - fedfred</title>
