--- a/changelog.html
+++ b/changelog.html
@@ -13,6 +13,7 @@
         gtag('config', 'G-Q7LK34R0CV');
     </script>
     <link rel="index" title="Index" href="genindex.html" /><link rel="search" title="Search" href="search.html" /><link rel="next" title="Code of Conduct" href="code_of_conduct.html" /><link rel="prev" title="Contributing to FedFred" href="contributing.html" />
+        <link rel="canonical" href="https://nikhilxsunder.github.io/fedfred/changelog.html" />
 
     <link rel="shortcut icon" href="_static/fedfred_favicon.ico"/><!-- Generated with Sphinx 7.4.7 and Furo 2024.08.06 -->
         <title>Changelog - fedfred</title>
