--- a/examples/data_visualization.html
+++ b/examples/data_visualization.html
@@ -13,6 +13,7 @@
         gtag('config', 'G-Q7LK34R0CV');
     </script>
     <link rel="index" title="Index" href="../genindex.html" /><link rel="search" title="Search" href="../search.html" /><link rel="next" title="API Reference" href="../api/index.html" /><link rel="prev" title="Advanced Usage Examples" href="advanced_usage.html" />
+        <link rel="canonical" href="https://nikhilxsunder.github.io/fedfred/examples/data_visualization.html" />
 
     <link rel="shortcut icon" href="../_static/fedfred_favicon.ico"/><!-- Generated with Sphinx 7.4.7 and Furo 2024.08.06 -->
         <title>Data Visualization Examples - fedfred</title>
