--- a/py-modindex.html
+++ b/py-modindex.html
@@ -12,6 +12,7 @@
         gtag('config', 'G-Q7LK34R0CV');
     </script>
     <link rel="index" title="Index" href="genindex.html" /><link rel="search" title="Search" href="search.html" />
+        <link rel="canonical" href="https://nikhilxsunder.github.io/fedfred/py-modindex.html" />
 
     <link rel="shortcut icon" href="_static/fedfred_favicon.ico"/><!-- Generated with Sphinx 7.4.7 and Furo 2024.08.06 --><title>Python Module Index - fedfred</title>
 <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=8f2a1f02" />
