deploy: 4c8a667c1f51b61bb7ee4800fb5b60546fcb5717

--- a/contributing.html
+++ b/contributing.html
@@ -800,7 +800,7 @@ poetry<span class="w"> </span>run<span class="w"> </span>bandit<span class="w"> 
 <p>When adding tests:</p>
 <ul class="simple">
 <li><p>Place tests in the <code class="docutils literal notranslate"><span class="pre">tests/</span></code> directory</p></li>
-<li><p>Name test files with a <code class="docutils literal notranslate"><span class="pre">test_</span></code> prefix</p></li>
+<li><p>Name test files with a <code class="docutils literal notranslate"><span class="pre">_test</span></code> suffix</p></li>
 <li><p>Follow the existing test patterns</p></li>
 <li><p>Test both success and error conditions</p></li>
 <li><p>Include comments explaining complex test scenarios</p></li>
